layout bug

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,24 +14,3 @@
 	font-stretch: ultra-expanded
 }
 
-# .gotop {
-    position: absolute;
-    top: -20px;
-    left: 50%;
-    margin-left: -40px;
-    background: #000;
-    z-index: 8;
-    width: 80px;
-    height: 80px;
-    font-size: 30px;
-    padding-top: 5px;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    border-radius: 50%;
-    -webkit-transition: 0.2s;
-    -o-transition: 0.2s;
-    transition: 0.2s;
-}
