--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -743,11 +743,12 @@
 
 	body {
 		background-color: #ffffff;
-		background-image: url(images/overlay.png), linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url(../../images/bg.jpg);
+		background-image: url(../../images/bg.jpg);
     	background-position: top left,	center center,	bottom center;
     background-position-x: left, center, center;
     background-position-y: top, center, bottom;
     background-attachment: fixed,	fixed,	fixed;
+    background-size: cover;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 300;
 		color: #777777;
@@ -1243,10 +1244,7 @@
 					margin: 0 0.25em 0 0.25em;
 					opacity: 0.35;
 					outline: 0;
-					-moz-transition: opacity .25s ease-in-out;
-					-webkit-transition: opacity .25s ease-in-out;
-					-ms-transition: opacity .25s ease-in-out;
-					transition: opacity .25s ease-in-out;
+					
 				}
 
 					#nav a:before {
@@ -1263,10 +1261,7 @@
 						border-bottom: solid 0em #ffffff;
 						border-left: solid 0.5em transparent;
 						border-right: solid 0.5em transparent;
-						-moz-transition: border-bottom-width .25s ease-in-out;
-						-webkit-transition: border-bottom-width .25s ease-in-out;
-						-ms-transition: border-bottom-width .25s ease-in-out;
-						transition: border-bottom-width .25s ease-in-out;
+						
 					}
 
 					#nav a span {
@@ -1280,10 +1275,7 @@
 						line-height: 2.25em;
 						left: 50%;
 						opacity: 0;
-						-moz-transition: opacity .25s ease-in-out;
-						-webkit-transition: opacity .25s ease-in-out;
-						-ms-transition: opacity .25s ease-in-out;
-						transition: opacity .25s ease-in-out;
+						
 						width: 5.5em;
 						margin-left: -2.75em;
 					}
@@ -1371,10 +1363,7 @@
 						line-height: 2.75em;
 						font-size: 1.5em;
 						z-index: 1;
-						-moz-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
-						-webkit-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
-						-ms-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
-						transition: width .15s ease-in-out, padding-right .15s ease-in-out;
+						
 					}
 
 						#me .pic .arrow:before {
